--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/kybdshortcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/kybdshortcuts.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!--       
 *     Copyright 2001 Sun Microsystems, Inc. All rights reserved.
 *     Use is subject to license terms.
@@ -29,7 +29,6 @@ Follow these links for Menu and Editor shortcuts:
 
 
 <hr>
-<font size=-2><a href="../credits.html">Legal Notices</a></font>
+<small><a href="../credits.html">Legal Notices</a></small>
 
 </body>
-</html>
