--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/webbrowser.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/webbrowser.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!--
 *     Copyright 2001 Sun Microsystems, Inc. All rights reserved.
 *     Use is subject to license terms.
@@ -42,7 +42,7 @@ browser are available for use with the IDE:
 <li><b>External browser (Command Line)</b>.
 A simple browser that executes a specified command when asked
 to display a URL.  Users will typically customize this browser
-to run Netscape Navigator<sup><font size ="-1">TM</font></sup>.  
+to run Netscape Navigator<sup><small>TM</small></sup>.  
 </li>
 <li><b>External browser (Windows)</b>. The Internet Explorer browser.  
 </li>
@@ -78,6 +78,6 @@ For more information see:
 <a href="default.html">Specifying the Default Browser</a>
 </blockquote>
 <hr>
-<font size=-2><a href="../credits.html">Legal Notices</a></font>
+<small><a href="../credits.html">Legal Notices</a></small>
 </body>
 </html>
