--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/proxy.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/proxy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!--
 *     Copyright 2001 Sun Microsystems, Inc. All rights reserved.
 *     Use is subject to license terms.
@@ -69,7 +69,7 @@ where <i>SOCKS-SERVER</i> is the host name of your SOCKS proxy.
 </td></tr>
 </table>
 <hr>
-<font size=-2><a href="../credits.html">Legal Notices</a></font>
+<small><a href="../credits.html">Legal Notices</a></small>
 
 </body>
 </html>
