Fixed error in webbrowser file.  Updated compiler files to use correct HTML tag and small tag.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/default.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/default.html
@@ -33,10 +33,10 @@ For a description of the different browser types, see
 <li>
 From the main menu, choose Tools <img src="../images/arrow.gif"> Options.
 </li>
-<li>In the Options window, expand the IDE Configuration node, and then
+<li>In the Options window, expand the IDE Configuration node.  Then
 expand the System node.
 </li>
-<liSelect the System Settings node.
+<li>Select the System Settings node.
 </li>
 <li>Click the value for the Web Browser property and select
 a browser type from the combo box.
