Added links to Setting Keyboard Shortcuts and Key Bindings Property Editor.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/kybdshortcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/kybdshortcuts.html
@@ -8,7 +8,7 @@
 <title>Keyboard Shortcuts</title>
 <link rel="StyleSheet" href="../ide.css" type="text/css">
 </head>
-<body bgcolor="#FFFFFF">
+<body>
 
 <h2>Keyboard Shortcuts</h2>
 <p>
@@ -27,6 +27,14 @@ Follow these links for Menu and Editor shortcuts:
 <a href="editorcuts.html">Editor Shortcuts</a>
 </blockquote>
 
+<p>
+For information on setting your own editor shortcuts, see:
+<blockquote>
+<a href="../editing/configuring/settingkeybdshorts.html">Setting Keyboard Shortcuts</a>
+<br></br>
+<a href="../editing/configuring/keybindings.html">Key Bindings Property Editor</a>
+</blockquote>
+</p>
 
 <hr>
 <small><a href="../credits.html">Legal Notices</a></small>
