Changed the big 5:  fixed HTML attribute, removed BGCOLOR attribute, changed font to small, added alt attribute to images, put properties in bulleted list.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/system_settings.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/system_settings.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!--
 *     Copyright 2001 Sun Microsystems, Inc. All rights reserved.
 *     Use is subject to license terms.
@@ -13,36 +13,28 @@
 
 <h2>Configuring System Settings</h2>
 <ol>
-<li>From the main window, choose Tools <img src="../images/arrow.gif"> Options.
+<li>From the main window, choose Tools <img src="../images/arrow.gif" alt="and choose"> Options.
 </li>
 <li>In the Options window, expand the IDE Configuration node.  Then
 expand the System node.
 </li>
 <li>Select the System Settings node.
 </li>
-<li>Modify the properties to your preferred settings.
-<table cellpadding="3" border="1">
-<tr>
-<th align="left">Property</th>
-<th align="left">Description</th>
-</tr>
-<tr>
-<td valign="top" width="100"><b>Confirm Delete</b>
-</td>
-<td valign="top">If True, opens a Confirm Deletion dialog box when
+<li>On the Properties tab, modify the properties to your preferred settings.
+<ul>
+<li><b>Confirm Delete.</b>
+If True, opens a Confirm Deletion dialog box when
 you attempt to delete an item. 
-</td>
-</tr>
-<tr>
-<td valign="top"><b>Home Page</b>
-</td>
-<td valign="top">Sets the web page that the web browser displays on startup.
-</td>
-</tr>
-<tr>
-<td valign="top"><b>MultiTab Pool</b>
-</td>
-<td valign="top">Governs the look of tabs in a multi-tab frame such as the Explorer, Source Editor, and Output window.  You have three choices:
+</li>
+
+<li>
+<b>Home Page.</b>
+Sets the web page that the web browser displays on startup.
+</li>
+
+<li>
+<b>MultiTab Pool.</b>
+Governs the look of tabs in a multi-tab frame such as the Explorer, Source Editor, and Output window.  You have three choices:
 <ul>
 <li>Basic. Displays a typical tabbed pane with named tabs at the bottom.
 </li>
@@ -51,40 +43,41 @@ you attempt to delete an item.
 <li>Pop-up. Displays a tabbed pane with unmarked tabs at the bottom.  Clicking a tab opens a pop-up menu that lists the content panes you can switch among.
 </li>
 </ul>
-</td>
-</tr><tr>
-<td valign="top"><b>Proxy Host</b>
-</td>
-<td valign="top">Sets the host name or numeric IP address of the proxy server 
+</li>
+
+<li>
+<b>Proxy Host.</b>
+Sets the host name or numeric IP address of the proxy server 
 to use to connect to HTTP and FTP sites.  The Use Proxy property must be set to true to use this proxy.
-</td>
-</tr><tr>
-<td valign="top"><b>Proxy Port</b>
-</td>
-<td valign="top">Sets the port number of the proxy server.</td>
-</tr><tr>
-<td valign="top"><b>Show File Extensions</b>
-</td>
-<td valign="top">If True, displays file extensions 
+</li>
+
+<li>
+<b>Proxy Port.</b>
+Sets the port number of the proxy server.
+</li>
+
+<li>
+<b>Show File Extensions.</b>
+If True, displays file extensions 
 in the Explorer.
-</td>
-</tr><tr>
-<td valign="top"><b>Show Tips on Startup</b>
-</td>
-<td valign="top">If True, opens a Welcome window when you start the IDE. 
+</li>
+
+<li>
+<b>Show Tips on Startup.</b>
+If True, opens a Welcome window when you start the IDE. 
 This window can help you start working with objects.  This window
 also provides over thirty tips on how to use the IDE.   
-</td>
-</tr><tr>
-<td valign="top"><b>Use Proxy</b>
-</td>
-<td valign="top">If True, uses a proxy for HTTP and FTP connections
+</li>
+
+<li>
+<b>Use Proxy.</b>
+If True, uses a proxy for HTTP and FTP connections
 in the web browser and Update Center. 
-</td>
-</tr><tr>
-<td valign="top"><b>User Interface</b>
-</td>
-<td valign="top">Sets the interface to use to manage your windows.  You
+</li>
+
+<li>
+<b>User Interface.</b>
+Sets the interface to use to manage your windows.  You
 have two choices: 
 <ul>
 <li>Traditional SDI.  This interfaces uses a single primary
@@ -94,11 +87,11 @@ window with a set of supplemental secondary windows.
 This interface confines all of an application's internal frames inside a 
 primary window.
 </ul>
-</td>
-</tr><tr>
-<td valign="top"><b>Web Browser</b>
-</td>
-<td valign="top">Sets the web browser to use when you are browsing the Internet.
+</li>
+
+<li>
+<b>Web Browser.</b>
+Sets the web browser to use when you are browsing the Internet.
 You have three choices:
 <ul>
 <li>External browser (Command Line).
@@ -112,9 +105,8 @@ or the Netscape Navigator<sup><small>TM</small></sup> browser, depending on your
 higher level of integration with the IDE than an external browser, but does not provide as much functionality.
 </li>
 </ul>
-</td>
-</tr>
-</table>
+</li>
+</ul>
 </li>
 </ol>
 <table>
@@ -122,11 +114,12 @@ higher level of integration with the IDE than an external browser, but does not 
 <th colspan=2 align=left>See also</th>
 </tr>
 <tr>
-<td width="23"></td>
-<td><a href="configure.html">Configuring the IDE</a></td>
+<td width="23">
+<td><a href="configure.html">Configuring the IDE</a>
+</td>
 </tr>
 </table>
 <hr>
-<font size=-2><a href="../credits.html">Legal Notices</a></font>
+<small><a href="../credits.html">Legal Notices</a></small>
 </body>
 </html>
