added alt attribute to image tags; put properties in bulleted list.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/default.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/default.html
@@ -31,7 +31,7 @@ For a description of the different browser types, see
 <b>To change the default browser for HTML pages:</b></p>
 <ol>
 <li>
-From the main menu, choose Tools <img src="../images/arrow.gif"> Options.
+From the main menu, choose Tools <img src="../images/arrow.gif" alt="and choose"> Options.
 </li>
 <li>In the Options window, expand the IDE Configuration node.  Then
 expand the System node.
