--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/webbrowser.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/webbrowser.html
@@ -16,11 +16,10 @@
 You can open a web browser from the IDE in two ways:
 </p>
 <ul>
-<li>Choose View <img src="../images/arrow.gif"> Web Browser (Ctrl-7) to
+<li>Choose View <img src="../images/arrow.gif" alt="and choose"> Web Browser (Ctrl-7) to
 open the browser to your home page.
 </li>
-<li>Choose Help <img src="../images/arrow.gif"> Bookmarks <img src="../images/arrow.gif"> <i>web site name</i> to open the browser to
-a predefined site.
+<li>Choose Help <img src="../images/arrow.gif" alt="and choose"> Bookmarks <img src="../images/arrow.gif" alt="and choose"> <i>web site name</i> to open the browser to a predefined site.
 </li>
 </ul>
 <p>
