Corrected settings-ignored  link.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_options.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_options.html
@@ -76,7 +76,7 @@ represents a group of settings.
 to those settings apply at that level.</td></tr>
 <tr><td><img src="images/setting-inherited.gif" alt=" "></td><td>The settings for the corresponding node are 
 inherited from a higher level.</td></tr>
-<tr><td><img src="images/setting-inherited.gif" alt=" "></td><td>The settings for the corresponding node are 
+<tr><td><img src="images/setting-ignored.gif" alt=" "></td><td>The settings for the corresponding node are 
 ignored.</td></tr>
 </table>
 
