Added pointer to changing color and font size on accessibility page; minor edits to other pages

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/default.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/default.html
@@ -33,8 +33,8 @@ For a description of the different browser types, see
 <li>
 From the main menu, choose Tools <img src="../images/arrow.gif" alt="and choose"> Options.
 </li>
-<li>In the Options window, expand the IDE Configuration node.  Then
-expand the System node.
+<li>In the Options window, expand the IDE Configuration node.
+Then expand the System node.
 </li>
 <li>Select the System Settings node.
 </li>
