removing obsolete BGCOLOR tag; commenting out links to docs in outside modules

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/credits.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/credits.html
@@ -3,12 +3,12 @@
 *     Copyright 2001 Sun Microsystems, Inc. All rights reserved.
 *     Use is subject to license terms.
 -->
-<HTML>
-<HEAD>
-<TITLE>Legal Notices</TITLE>
+<html>
+<head>
+<title>Legal Notices</title>
 <link rel="StyleSheet" href="ide.css" type="text/css">
-</HEAD>
-<BODY BGCOLOR="#FFFFFF">
+</head>
+<body>
 
 <p>
 The contents of this file are subject to the Sun Public License
