--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/editorcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/editorcuts.html
@@ -8,7 +8,7 @@
 <title>Editor Shortcuts</title>
 <link rel="StyleSheet" href="../ide.css" type="text/css">
 </head>
-<body bgcolor="#FFFFFF">
+<body>
 
 <h2>Editor Shortcuts</h2>
 <p>
