Final fixes to map file; fixed link in rmi topic, updated shortcuts, reformatted startup switch page

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/editorcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/editorcuts.html
@@ -280,7 +280,16 @@ except Save.</td>
 clipboard.</td> 
 </tr>
 <tr>
+<td valign="top">Shift-Delete</td>
+<td valign="top">(Cut) Deletes the current selection and places it on the
+clipboard.</td> 
+</tr>
+<tr>
 <td valign="top">Ctrl-C</td>
+<td valign="top">(Copy) Copies the current selection to the clipboard.</td>
+</tr>
+<tr>
+<td valign="top">Ctrl-Insert</td>
 <td valign="top">(Copy) Copies the current selection to the clipboard.</td>
 </tr>
 <tr>
