--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_startup-switches.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_startup-switches.html
@@ -21,37 +21,32 @@
 starts parsing the command line options. You can break the
 options into multiple lines.
 
-<p>The following options are available:
+<p>The following options are available:</p>
 
-<table border="1" cellpadding="5" cellspacing="0">
-<tr>
-<th><b>Parameter</b></th>
-<th><b>Description</b></th>
-</tr>
 
-<tr><td><pre>-h
+<pre>-h
 -help</pre></td>
-<td>Print descriptions of common startup parameters.</td></tr>
-<tr><td><pre>-jdkhome <I>jdk_home_dir</I></pre></td>
-<td>Use the specified version of the Java(TM) 2 SDK instead of the default SDK. By default on Windows 
-  systems, the loader looks into the Windows registry and uses the latest SDK available.</td></tr>
-<tr><td><pre>-classic</pre></td><td>use the classic JVM, instead of the default Java HotSpot Client VM.</td></tr>
-<tr><td><pre>-cp:p <I>additional_classpath</I></pre></td><td>Prepend the specified classpath to the IDE's classpath.</td></tr>
-<tr><td><pre>-cp:a <I>additional_classpath</I></pre></td><td>Append the specified classpath to the IDE's classpath.</td></tr>
-<tr><td><pre>-J<I>jvm_flags</I></pre></td><td>Pass the specified flags directly to the JVM.</td></tr>
-<tr><td><pre>-ui <I>UI_class_name</I></pre></td><td>Selects the given class as the  IDE's  look  and  feel. 
+<blockquote>Print descriptions of common startup parameters.</blockquote>
+<pre>-jdkhome <I>jdk_home_dir</I></pre></td>
+<blockquote>Use the specified version of the Java(TM) 2 SDK instead of the default SDK. By default on Windows 
+  systems, the loader looks into the Windows registry and uses the latest SDK available.</blockquote>
+<pre>-classic</pre><blockquote>use the classic JVM, instead of the default Java HotSpot Client VM.</blockquote>
+<pre>-cp:p <I>additional_classpath</I></pre><blockquote>Prepend the specified classpath to the IDE's classpath.</blockquote>
+<pre>-cp:a <I>additional_classpath</I></pre><blockquote>Append the specified classpath to the IDE's classpath.</blockquote>
+<pre>-J<I>jvm_flags</I></pre><blockquote>Pass the specified flags directly to the JVM.</blockquote>
+<pre>-ui <I>UI_class_name</I></pre><blockquote>Selects the given class as the  IDE's  look  and  feel. 
 The  following  are  two  examples  of  look  and  feel classes:<br>
 <ul><li>com.sun.java.swing.plaf.motif.MotifLookAndFeel</li>
 <li>javax.swing.plaf.metal.MetalLookAndFeel</li></ul>
-If this option is not used, the IDE uses the javax.swing.plaf.metal.MetalLookAndFeel class.</td></tr>
-<tr><td><pre>-fontsize <I>size</I></pre></td><td>Sets the font size, expressed in points, in 
-the IDE's user interface. If this option is not used, the fontsize is 11 points.</td></tr>
-<tr><td><pre>-locale <I>language[:country[:variant]]</I></pre></td><td>Use the specified locale.</td></tr>
-<tr><td><pre>-userdir <I>userdir</I></pre></td><td>Explicitly specify the user directory,
+If this option is not used, the IDE uses the javax.swing.plaf.metal.MetalLookAndFeel class.</blockquote>
+<pre>-fontsize <I>size</I></pre><blockquote>Sets the font size, expressed in points, in 
+the IDE's user interface. If this option is not used, the fontsize is 11 points.</blockquote>
+<pre>-locale <I>language[:country[:variant]]</I></pre><blockquote>Use the specified locale.</blockquote>
+<pre>-userdir <I>userdir</I></pre><blockquote>Explicitly specify the user directory,
  which is the location where user settings are stored.  If this option is not used on UNIX, the
       location is ${HOME}/nbuser33. On Microsoft Windows systems, the launcher asks the user
-      to specify the userdir and stores the value in the registry for later use.</td></tr>
-</table>
+      to specify the userdir and stores the value in the registry for later use.</blockquote>
+
 
 
 
