Two small corrections.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_options.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_options.html
@@ -49,7 +49,7 @@ If you modify a setting that is only defined in the default level, a definition 
 you provide is moved to the User level.</li>
 <li><b>User.</b>&nbsp;  Like default settings, settings defined at the User level apply to all of your projects. Settings 
 defined at the User level override settings at the Default level.</li>
-<li><b>Default.</b>&nbsp;  Settings configured at the Project level only apply to the project in which they are configured. 
+<li><b>Project.</b>&nbsp;  Settings configured at the Project level only apply to the project in which they are configured. 
 Any settings configured at the Project level override user settings and default settings. </li>
 </ul>
 
@@ -108,7 +108,7 @@ for other projects.
 <li>In the top row of cells, click the Origin of Setting (&lt;&lt;) cell to display the 
 levels for the settings.</li>
 <li>Navigate to and select the node for the settings you want to configure.</li>
-<li>Click the cell in the Default column for the settings node you have selected and choose 
+<li>Click the cell in the User column for the settings node you have selected and choose 
 Revert Definition.
 <p>You are then prompted to make sure you want to remove that settings node's configuration for 
 the current project. If you click Yes, the project reverts to using the setting stored at the User 
