Mapped some autoupdate CSH IDs, reordered Managing Modules entries, and replaced incorrect usages of "choose" with "select".

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_options.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_options.html
@@ -35,7 +35,7 @@ there are multiple tabs for distinct categories of properties.</p>
 <ul>
 <li>If the value is a string,  
 you can edit the value inline and press Enter to save the change.</li>
-<li>If a drop-down arrow appears when you click the value, you can select the arrow and choose the 
+<li>If a drop-down arrow appears when you click the value, you can select the arrow and select the 
 value from the combo box.</li>
 <li>If an ellipsis (...) button appears, you can click the ellipsis button to open a property editor.</li>
 </ul>
