Adding nbsp; after inline images; added alt tags for various jar packager images and object icon images.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_options.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_options.html
@@ -20,7 +20,7 @@
 applied globally or by project.</p>
 
 <p>The left pane of the window contains a tree view of all of the configurable items in the IDE. 
-The column under the Show Levels (&lt;&lt;) button displays the <img src="images/project.gif" alt="Project Setting"> 
+The column under the Show Levels (&lt;&lt;) button displays the <img src="images/project.gif" alt="Project Setting">&nbsp;
 icon for settings that have a configuration specific to the current project. 
 The right pane displays a property sheet, which contains the names and values of the 
 settings for the item selected in the left pane. For some types of settings, 
@@ -28,7 +28,7 @@ there are multiple tabs for distinct categories of properties.</p>
 
 <p><b>To open the Options window:</b></p>
 <ul>
-<li>Choose Tools <img src="../images/arrow.gif" alt="and choose"> Options.</li>
+<li>Choose Tools <img src="../images/arrow.gif" alt="and choose">&nbsp;Options.</li>
 </ul>
 
 <p>To edit a setting, click the setting's value in the property sheet. 
@@ -56,8 +56,7 @@ Any settings configured at the Project level override user settings and default 
 <p>The cells in the column under the Show Levels (&lt;&lt;) button indicate whether the corresponding settings 
 are defined at the level of the current project or not. If the cell corresponding to the node you are configuring 
 is empty, any changes that you make in the property sheet are applied at the User level. If the cell 
-contains the <img src="images/project.gif" alt="Project Setting"> 
-icon, any changes that you make in the property sheet are applied only to the current project. </p>
+contains the <img src="images/project.gif" alt="Project Setting">&nbsp;icon, any changes that you make in the property sheet are applied only to the current project. </p>
 
 <p>You can see a table view of how the settings are stored by clicking the 
 Show Levels (&lt;&lt;) cell. There are columns for project, user, and default settings. Each row 
@@ -80,13 +79,13 @@ ignored.</td></tr>
 
 <p><b>To configure a setting for the current project only:</b></p>
 <ol>
-<li>Choose Tools <img src="../images/arrow.gif" alt="and choose"> Options.</li>
+<li>Choose Tools <img src="../images/arrow.gif" alt="and choose">&nbsp;Options.</li>
 <li>In the top row of cells, click the Origin of Setting (&lt;&lt;) cell to display the 
 levels for the settings.</li>
 <li>Navigate to and select the node for the settings you want to configure.</li>
 <li>Click the cell in the Projects column for the settings node you have selected and choose 
 Define Here.
-<p>The <img src="images/project.gif" alt="Project Setting"> icon appears in the Origin of 
+<p>The <img src="images/project.gif" alt="Project Setting">&nbsp;icon appears in the Origin of 
 Setting (&lt;&lt;) column.</p></li>
 <li>In the property sheet, configure the desired settings.</li>
 </ol>
@@ -104,7 +103,7 @@ for other projects.
 
 <p><b>To revert from a project setting to a user setting:</b></p>
 <ol>
-<li>Choose Tools <img src="../images/arrow.gif" alt="and choose"> Options.</li>
+<li>Choose Tools <img src="../images/arrow.gif" alt="and choose">&nbsp;Options.</li>
 <li>In the top row of cells, click the Origin of Setting (&lt;&lt;) cell to display the 
 levels for the settings.</li>
 <li>Navigate to and select the node for the settings you want to configure.</li>
@@ -118,7 +117,7 @@ level.</p></li>
 
 <p><b>To revert to the default setting:</b></p>
 <ol>
-<li>Choose Tools <img src="../images/arrow.gif" alt="and choose"> Options.</li>
+<li>Choose Tools <img src="../images/arrow.gif" alt="and choose">&nbsp;Options.</li>
 <li>In the top row of cells, click the Origin of Setting (&lt;&lt;) cell to display the 
 levels for the settings.</li>
 <li>Navigate to and select the node for the settings you want to configure.</li>
