Fix of bug #18050: localized names of templates.

--- a/form/src/org/netbeans/modules/form/resources/BeanForm.html
+++ b/form/src/org/netbeans/modules/form/resources/BeanForm.html
@@ -12,5 +12,6 @@
   -->
 
 <HTML><BODY>
-Using this template, you can design a new form based on any class.
+Using this template, you can design a new form based on any JavaBean class
+(both visual and non-visual). This class must be specified explicitly.
 </BODY></HTML>
