Fixed coding error

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/accessibility/accessibility_home.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/accessibility/accessibility_home.html
@@ -43,7 +43,7 @@ the <tt>${IDE_HOME>/bin/ide.cfg</tt> file.  For instructions, see <a href="../co
 <p>
 You can also set the font and color of the Source Editor and
 Output window.  For more information, see
-<a href="../editing/configuring/fontsandcolors.html">Setting Fonts and Colors/a> and <a href="../configure/output.html">Customizing the
+<a href="../editing/configuring/fontsandcolors.html">Setting Fonts and Colors</a> and <a href="../configure/output.html">Customizing the
 Output Window.</a>
 </P>
 <h3>Code Completion</h3>
