Added new files on debugging executor and individual browser types (windows, unix, and command line).

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/webbrowser.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/webbrowser.html
@@ -59,7 +59,9 @@ For step-by-step instructions on using a web browser in the IDE, see:
 For information on the available web browsers and their properties:
 </p>
 <blockquote>
-<a href="configure.html">External Browser</a><br>
+<a href="winwebbrowser.html">External Browser (Windows)</a><br>
+<a href="unixwebbrowser.html">External Browser (UNIX)</a><br>
+<a href="simpleextbrowser.html">External Browser (Command Line)</a><br>
 <a href="swingbrowser.html">Swing HTML Browser</a>
 </blockquote>
 <hr>
