added help for jar executor and debugging executor; fixed broken links

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/default.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/webbrowser/default.html
@@ -72,7 +72,9 @@ a browser type from the combo box.
 <tr>
 <td width="23"></td>
 <td>
-<a href="configure.html">External Browser</a>
+<a href="winwebbrowser.html">External Browser (Windows)</a><br>
+<a href="unixwebbrowser.html">External Browser (UNIX)</a><br>
+<a href="simpleextbrowser.html">External Browser (Command Line)</a>
 <br>
 <a href="swingbrowser.html">Swing HTML Browser</a>
 </td></tr>
