--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/kybdshortcuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/kybdshortcuts.html
@@ -39,7 +39,7 @@ For help viewer shortcuts, see:
 <p>
 For information on setting your own editor shortcuts, see:
 <blockquote>
-<a href="../editing/configuring/settingkeybdshorts.html">Setting Keyboard Shortcuts</a>
+<a href="../editing/configuring/settingkeybdshorts.html">Setting Keyboard Shortcuts for the Source Editor</a>
 <br></br>
 <a href="../editing/configuring/keybindings.html">Key Bindings Property Editor</a>
 </blockquote>
