--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_startup-switches.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/configure_startup-switches.html
@@ -1,13 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!--
  * 
- *     Copyright 2001 Sun Microsystems, Inc. All rights reserved.
+ *     Copyright © 2002 Sun Microsystems, Inc. All rights reserved.
  *     Use is subject to license terms.
  * 
- *     Copyright 2001 Sun Microsystems, Inc. Tous droits réservés.
- *     L'utilisation est régie par les termes de cette licence.
- *
- *
 -->
 <html>
 <head>
