--- a/api.xml/src/org/netbeans/spi/xml/package.html
+++ b/api.xml/src/org/netbeans/spi/xml/package.html
@@ -1,9 +1,25 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!--
+   -                 Sun Public License Notice
+   - 
+   - The contents of this file are subject to the Sun Public License
+   - Version 1.0 (the "License"). You may not use this file except in
+   - compliance with the License. A copy of the License is available at
+   - http://www.sun.com/
+   - 
+   - The Original Code is NetBeans. The Initial Developer of the Original
+   - Code is Sun Microsystems, Inc. Portions Copyright 1997-2000 Sun
+   - Microsystems, Inc. All Rights Reserved.
+  -->
 
-<title>XML Tools SPI</title>
-  
+<html>
+<head><title>XML Tools SPI</title></head>
+
+<body>
+NetBeans XML tools SPI.
+
 <h2>XML Tools SPIs</h2>
 This package and its subpackages contain module neutral SPIs for XML tools.
 See also XML Tools APIs.
 <p>
 It depends on Java (including JSR extensions), OpenIDE API and XML tools API only.
+</body></html>
