Updated properties in systems settings; moved Javahelp shortcuts from accessibility to shortcuts directory.  Fixed links to Javahelp shortcuts.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/configure/system_settings.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/configure/system_settings.html
@@ -50,9 +50,13 @@ in the Explorer.
 
 <li>
 <b>Show Tips on Startup.</b>
-If True, opens a Welcome window when you start the IDE. 
-This window can help you start working with objects.  This window
-also provides over thirty tips on how to use the IDE.   
+If True, shows tips in the Welcome window when you start the IDE.   
+</li>
+
+<li>
+<b>Show Tool Tips in IDE.</b>
+If True, shows a short text string that describes the interface
+element beneath the pointer.   
 </li>
 
 <li>
@@ -80,16 +84,16 @@ primary window.
 Sets the web browser to use when you are browsing the Internet.
 Your choices are as follows:
 <ul>
-<li><b>External browser (Command Line)</b>.
+<li><b>External Browser (Command Line)</b>.
 A simple browser that executes a specified command when asked
 to display a URL.  Users will typically customize this browser
 to run Netscape Navigator.  
 </li>
-<li><b>External browser (Windows)</b>. The HTML browser, such as Internet
+<li><b>External Browser (Windows)</b>. The HTML browser, such as Internet
 Explorer or Netscape Navigator, set as the default web browser
 on your Microsoft Windows platforms.  
 </li>
-<li><b>External browser (UNIX)</b>.
+<li><b>External Browser (UNIX)</b>.
 The HTML browser set as the default web browser in the UNIX environments.  
 </li>
 <li><b>Swing HTML Browser</b>.  An internal browser that provides a
