Began documenting Javadoc Manager; minor fixes to debugging and accessibility sections

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/accessibility/stylesheet.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/accessibility/stylesheet.html
@@ -23,14 +23,19 @@ and the color of borders.
 <b>To set fonts and colors for displaying help pages:</b>
 </p>
 <ol>
-<li>In a command window, change to the directory <i>install-directory</i><tt>/docs/org/netbeans/modules/usersguide</tt>.
+<li>From the main window, choose File <img src="../images/arrow.gif" alt="and choose">&nbsp;Open File.
+</li>
+<li>In the Open dialog box, navigate to <i>install-directory</i><tt>/docs/org/netbeans/modules/usersguide</tt>
+and open the file <tt>ide.css</tt>.
 <p>
-This directory includes the file <tt>ide.css</tt>.  This file
+The <tt>ide.css</tt> file
 is the style sheet that describes how to
 present the fonts and colors in the help pages.
 </p>
 </li>
-<li>Edit <tt>ide.css</tt> to your preferences and save your changes.
+<li>Edit <tt>ide.css</tt> to your preferences.
+</li>
+<li>Choose File <img src="../images/arrow.gif" alt="and choose">&nbsp;Save.
 </li>
 <li>Open the help viewer and verify your changes.
 </li>
