Removed mention of the Running workspace.

--- a/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts.html
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/shortcuts/menucuts.html
@@ -290,8 +290,7 @@ compiled.</td>
 <tr>
 <td valign="top">Ctrl-Shift-F6</td>
 <td valign="top">Execute Project</td>
-<td valign="top">Changes workspace to the Running workspace and runs
-the current project.</td> 
+<td valign="top">Runs the current project.</td> 
 </tr>
 <tr>
 <td valign="top">Ctrl-Shift-F5</td>
